[package]
name = "brainterpreter"
version = "0.2.0"
edition = "2021"
description = "An interpreter for a toy programming language"
authors = ["Dmytro Kovalchuk"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0.40"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "brainfuck_benchmark"
harness = false
