[package]
name = "brainterpreter"
version = "0.1.2"
edition = "2021"
description = "An interpreter for a Bauble toy programming language"
authors = ["Dmytro Kovalchuk"]
license = "MIT"
repository = "https://github.com/dimasmith/brainterpreter"
homepage = "https://dimasmith.github.io/brainterpreter/"
documentation = "https://docs.rs/brainterpreter"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", optional = true, features = ["derive"] }
env_logger = { version = "0.10.0", optional = true }
log = "0.4.20"
thiserror = "1.0.49"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
env_logger = "0.10.0"

[[bench]]
name = "brainfuck_benchmark"
harness = false

[features]
cli = ["clap", "env_logger"]

[[bin]]
name = "bauble"
required-features = ["cli"]
